# chronic-disease-risk-modeling

./: .gitignore  4-2 开题论证答辩评价表（计算机专业）.docx  4-3 开题论证校外专家评价表.docx  README.md  close.cmd  pyproject.toml  requirements.txt  start.cmd  verify.cmd  开题报告.docx  开题答辩.pptx
backend/app/: config.py  main.py
backend/tests/: conftest.py  test_explain_api.py  test_health_api.py  test_overview_api.py  test_predict_api.py  test_real_artifacts_smoke.py  test_sample_api.py  test_task_artifacts_api.py  test_tasks_api.py
configs/: glm7.yaml  label_rules.yaml  modeling.yaml  nhanes.yaml  nhanes_variables.yaml  paths.yaml
docs/: charls.md  incidence_notes.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
scripts/: analyze_glm7.py  build_model_dataset.py  build_nhanes_interim.py  download_nhanes.py  export_artifacts.py  export_shap.py  run_nhanes_pipeline.py  summarize_tuning.py  train_baseline.py  train_candidates.py  train_candidates_feature_eng.py  train_candidates_tuned.py  validate_on_charls.py
src/chronic_disease_risk/: __init__.py  config.py
tests/: conftest.py
tests/artifacts/: test_batch_training_exporter.py  test_exporter.py  test_training_exporter.py
tests/config/: test_config.py
tests/data_sources/: test_nhanes_download.py  test_nhanes_registry.py  test_xpt_reader.py
tests/evaluation/: test_metrics.py  test_reporting_plots.py
tests/features/: test_formulas.py  test_glm7.py
tests/fixtures/: sample_interim.csv  sample_processed.csv
tests/integration/: test_pipeline_smoke.py  (+1 more)
(+65 files in other folders)
